# tree-sitter-objj

./: .editorconfig 2  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  DEVELOPERS.md  LICENSE.txt  Makefile  Package.swift  README.md  RELEASING.md  TODO.txt  VERSION.txt  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  release.sh  setup.py  tree-sitter.json
bindings/c/: tree-sitter-objj.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_objj/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterObjJ/: objj.h
bindings/swift/TreeSitterObjJTests/: TreeSitterObjJTests.swift
queries/: folds.scm  highlights.scm  symbols.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: array_test.j
test/runner/: objj-debug.py  objj-lint.py
