[package]
name = "tree-sitter-objj"
description = "A Javascript superset with support for classes and message passing"
version = "0.1.0"
authors = ["David Richardson <david.richardson@enquora.com>"]
license = "LGPL v2.1"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "objj"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-objj"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
